--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,25 @@ services:
     restart: 'unless-stopped'
     networks:
       - backend
+  db-server:
+    image: mysql:latest
+    container_name: db-server
+    restart: 'unless-stopped'
+    environment:
+      MYSQL_ROOT_PASSWORD: 'root'
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    networks:
+      - backend
+    volumes:
+      - /var/lib/mysql
 
 networks:
   backend:
     driver: bridge
+
 
 volumes:
   data:
