--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
-    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
