add install package rmarkdown + pandoc

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,10 @@ RUN npm install --legacy-peer-deps
 # Install Linux Package
 RUN apt-get update && apt-get install -y \
     r-base \
+    pandoc \
   && rm -rf /var/lib/apt/lists/*
+
+RUN Rscript -e "install.packages('rmarkdown')"
 
 # Set Env
 ENV NODE_ENV development
