--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.9",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
@@ -65,7 +66,14 @@
     "node-gyp": "^9.1.0",
     "nodemon": "^2.0.19",
     "pm2": "^5.2.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.7.1",
+    "stylelint": "^15.9.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-order": "^6.0.3",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
