--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -20,6 +20,7 @@ RUN Rscript -e "install.packages('rmarkdown')"
 
 # Set Env
 ENV NODE_ENV development
+ENV DB_SERVER db-server
 EXPOSE 3000
 
 # Cmd script
