--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.9",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "google-auth-library": "^9.0.0",
     "googleapis": "^122.0.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
