--- a/.env.development.local
+++ b/.env.development.local
@@ -4,6 +4,9 @@ PORT = 3000
 # TOKEN
 SECRET_KEY = secretKey
 
+# CLIENT ID
+CLIENT_ID = '694909247104-p1irblblsku18brf1t4qo6gv05vu6kbl.apps.googleusercontent.com'
+
 # LOG
 LOG_FORMAT = dev
 LOG_DIR = ../logs
