--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.1",
@@ -53,6 +54,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
