--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y \
     pandoc \
   && rm -rf /var/lib/apt/lists/*
 
-RUN Rscript -e "install.packages('rmarkdown')"
+RUN Rscript -e "install.packages(c('rmarkdown','stringr'))"
 
 # Set Env
 ENV NODE_ENV development
