Revert "update docker files"
This reverts commit 8dd825addb692e9fa5c18b8e17c1f77accbf6448.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y \
     pandoc \
   && rm -rf /var/lib/apt/lists/*
 
-RUN Rscript -e "install.packages(c('rmarkdown','stringr'))"
+RUN Rscript -e "install.packages('rmarkdown')"
 
 # Set Env
 ENV NODE_ENV development
